[emacs] Rework face definitions

--- a/emacs.org
+++ b/emacs.org
@@ -3213,11 +3213,11 @@ Bury unneeded buffers, computers have more than enough memory.
     (defvar koek-wm/previous-workspace-n nil
       "Previously selected workspace number.")
 
-    (defface koek-wm/selected-workspace '((t :foreground "#ffffff"))
+    (defface koek-wm/selected-workspace '((t :inherit mode-line-emphasis))
       "Face for selected workspace label in mode line."
       :group 'exwm-workspace)
 
-    (defface koek-wm/unselected-workspace '((t :foreground "#000000"))
+    (defface koek-wm/unselected-workspace nil
       "Face for unselected workspace label in mode line."
       :group 'exwm-workspace)
 
@@ -3286,7 +3286,7 @@ Bury unneeded buffers, computers have more than enough memory.
   (use-package exwm-floating
     :defer t
     :preface
-    (defface koek-wm/floating-border '((t :foreground "#000000"))
+    (defface koek-wm/floating-border '((t :foreground "white"))
       "Face for border of floating frames."
       :group 'exwm-floating)
 
@@ -4274,7 +4274,7 @@ For news feeds, see [[*News feeds][News feeds]].
     :straight pdf-tools
     :mode ((rx ".pdf" string-end) . pdf-view-mode)
     :preface
-    (defface koek-pdf/midnight '((t :foreground "#000000" :background "#ffffff"))
+    (defface koek-pdf/midnight '((t :foreground "white" :background "black"))
       "Face for page when `pdf-view-midnight-minor-mode' is enabled."
       :group 'pdf-view)
 
