[emacs] Prefer nil to empty list when setting variables

--- a/emacs.org
+++ b/emacs.org
@@ -554,7 +554,7 @@ recognize [[*subword - Recognize words in camel case words][subwords]].
     (require 'smartparens-config)
 
     (setq sp-navigate-interactive-always-progress-point t)
-    (setq sp-navigate-reindent-after-up ())
+    (setq sp-navigate-reindent-after-up nil)
     (setq sp-highlight-pair-overlay nil)
     (koek-sp/setup-separate-sexp-handler 'clojure-mode "(" "[" "{" "\"")
     (koek-sp/setup-separate-sexp-handler 'lisp-mode "(" "\"")
@@ -6287,7 +6287,7 @@ Configure calendars. For calendar details, login to [[https://www.fastmail.com/]
     ;; Store sync state with calendars, simplifying backup
     (setq org-caldav-save-directory koek/calendars-dir)
     (setq org-caldav-inbox (expand-file-name "Afspraken.org" koek/calendars-dir))
-    (setq org-caldav-files ())
+    (setq org-caldav-files nil)
 
     ;; Remote copy
     (setq org-caldav-url
