--- a/emacs.org
+++ b/emacs.org
@@ -637,6 +637,12 @@ End files with empty line.
     :delight)
 #+END_SRC
 
+** hl-line - Highlight current line
+#+BEGIN_SRC emacs-lisp
+  (use-package hl-line
+    :hook (prog-mode . hl-line-mode))
+#+END_SRC
+
 ** Edit commands
 Bind sort and align region.
 
