[emacs] Configure keycast

--- a/emacs.org
+++ b/emacs.org
@@ -4452,6 +4452,20 @@ Stavrou)]].
     :delight bongo-dired-library-mode)
 #+END_SRC
 
+** keycast - Show key presses
+[[https://github.com/tarsius/keycast][keycast (GitHub)]]
+
+#+BEGIN_SRC emacs-lisp
+  (use-package keycast
+    :straight t
+    :defer t
+    :config
+    (setq keycast-window-predicate #'moody-window-active-p)
+    (setq keycast-insert-after 'keycast-marker)
+    (setq keycast-separator-width 3)
+    (setq keycast-remove-tail-elements nil))
+#+END_SRC
+
 * Languages
 
 ** Arduino
@@ -6092,7 +6106,7 @@ Set mode line. Style it with [[https://github.com/tarsius/moody][moody]].
             `(,@koek-ml/dummies " "
               koek-ml/eldoc koek-ml/ace koek-ml/depth
               koek-ml/exwm-workspaces koek-ml/eyebrowse
-              koek-ml/id koek-ml/diff koek-ml/task koek-ml/modes))
+              koek-ml/id koek-ml/diff keycast-marker koek-ml/task koek-ml/modes))
       (force-mode-line-update)
       (dolist (variant (koek-ml/get-variants))
         (let ((state (koek-ml/get-variant-state variant)))
@@ -6117,8 +6131,8 @@ Set mode line. Style it with [[https://github.com/tarsius/moody][moody]].
                   `(,@koek-ml/dummies " "
                     koek-ml/eldoc koek-ml/ace koek-ml/ediff
                     koek-ml/depth koek-ml/exwm-workspaces koek-ml/eyebrowse
-                    koek-ml/id koek-ml/state
-                    koek-ml/position koek-ml/pdf koek-ml/exwm-input koek-ml/input
+                    koek-ml/id koek-ml/state koek-ml/position koek-ml/pdf
+                    keycast-marker koek-ml/exwm-input koek-ml/input
                     koek-ml/flymake koek-ml/vc koek-ml/task koek-ml/modes)))
 #+END_SRC
 
