[emacs] Rework setting recentf exclude regexps

--- a/emacs.org
+++ b/emacs.org
@@ -293,11 +293,12 @@ VC is a placeholder.
     (require 'find-func)
     (let ((file-names
            (list
-            (locate-dominating-file (find-library-name "files") emacs-version)
-            user-emacs-directory)))
-      (dolist (file-name file-names)
-        (push (rx-to-string `(and line-start ,(file-truename file-name)))
-              recentf-exclude)))
+            (rx line-start
+                (literal (locate-dominating-file (find-library-name "files")
+                                                 emacs-version)))
+            ;; True and symbolic file name variants
+            (regexp-quote (file-relative-name user-emacs-directory "~/")))))
+      (setq recentf-exclude (append file-names recentf-exclude)))
     (recentf-mode))
 #+END_SRC
 
@@ -6542,7 +6543,7 @@ Configure news feeds.
 
     (use-package recentf
       :config
-      (push (rx-to-string `(and line-start ,elfeed-db-directory)) recentf-exclude))
+      (push (rx line-start (literal elfeed-db-directory)) recentf-exclude))
 
     (dolist (feed koek/feeds)
       (let ((args
