[emacs] Rename GIMP buffers

--- a/emacs.org
+++ b/emacs.org
@@ -3277,6 +3277,8 @@ Bury unneeded buffers, computers have more than enough memory.
       (let ((class (downcase exwm-class-name)))
         (exwm-workspace-rename-buffer
          (cond
+          ((string-prefix-p "gimp" class)
+           "GIMP")
           ((string-prefix-p "firefox" class)
            (replace-regexp-in-string
             (rx "Mozilla Firefox" (zero-or-one " (Private Browsing)") line-end)
