[gnome] Add Teams to Internet folder

--- a/dotfiles.org
+++ b/dotfiles.org
@@ -235,6 +235,7 @@ To apply configuration, run:
   firefox.desktop
   io.github.qtox.qTox.desktop
   jami-gnome.desktop
+  teams.desktop
 #+END_SRC
 
 ** Leisure
