--- a/emacs.org
+++ b/emacs.org
@@ -3321,7 +3321,9 @@ Bury unneeded buffers, computers have more than enough memory.
     :defer t
     :config
     (setq exwm-manage-configurations
-          `(((string-prefix-p "firefox" (downcase exwm-class-name))
+          `(((string-prefix-p "gimp" (downcase exwm-class-name))
+             char-mode t)
+            ((string-prefix-p "firefox" (downcase exwm-class-name))
              simulation-keys
              ,(mapcar (pcase-lambda (`(,from . ,to))
                         (cons (kbd from) (kbd to)))
