[emacs] Bind various commands in line and char mode

--- a/emacs.org
+++ b/emacs.org
@@ -3220,6 +3220,19 @@ Bury unneeded buffers, computers have more than enough memory.
           (mapcar (pcase-lambda (`(,key . ,command))
                     (cons (kbd key) command))
                   '(("s-s" . exwm-input-toggle-keyboard)
+                    ("s-0" . koek-wm/switch-workspace-0)
+                    ("s-1" . koek-wm/switch-workspace-1)
+                    ("s-2" . koek-wm/switch-workspace-2)
+                    ("s-3" . koek-wm/switch-workspace-3)
+                    ("s-4" . koek-wm/switch-workspace-4)
+                    ("s-5" . koek-wm/switch-workspace-5)
+                    ("s-6" . koek-wm/switch-workspace-6)
+                    ("s-7" . koek-wm/switch-workspace-7)
+                    ("s-8" . koek-wm/switch-workspace-8)
+                    ("s-9" . koek-wm/switch-workspace-9)
+                    ("s-w" . koek-wm/switch-previous-workspace)
+                    ("s-q" . bury-buffer)
+                    ("s-d" . kill-current-buffer)
                     ("<f11>" . exwm-layout-toggle-fullscreen))))
 
     ;; Translate Emacs to non Emacs keybindings in line mode
