[emacs] Grab ivy-resume in line mode

--- a/emacs.org
+++ b/emacs.org
@@ -3241,8 +3241,9 @@ Bury unneeded buffers, computers have more than enough memory.
                     (cons (kbd from) (kbd to)))
                   koek-wm/simulation-keys))
 
-    ;; Grab C-z (repeat) in line mode
+    ;; Grab repeat and ivy-resume in line mode
     (push ?\C-z exwm-input-prefix-keys)
+    (push ?\C-r exwm-input-prefix-keys)
 
     (add-hook 'exwm-manage-finish-hook #'koek-wm/setup-application-keys))
 
