--- a/emacs.org
+++ b/emacs.org
@@ -460,7 +460,7 @@ recognize [[*subword - Recognize words in camel case words][subwords]].
       (auto-fill-mode)))
 
   (add-hook 'text-mode-hook #'koek-af/maybe-enable)
-  (delight 'auto-fill-function nil 'emacs)
+  (delight 'auto-fill-function nil 'simple)
 #+END_SRC
 
 ** smartparens - Pairs & symbolic expressions
