--- a/emacs.org
+++ b/emacs.org
@@ -644,7 +644,7 @@ End files with empty line.
 ** hl-line - Highlight current line
 #+BEGIN_SRC emacs-lisp
   (use-package hl-line
-    :hook (prog-mode . hl-line-mode))
+    :hook ((prog-mode conf-mode) . hl-line-mode))
 #+END_SRC
 
 ** Edit commands
