[emacs] Tweak appearance border floating frames

--- a/emacs.org
+++ b/emacs.org
@@ -3322,6 +3322,7 @@ Bury unneeded buffers, computers have more than enough memory.
       (setq exwm-floating-border-color
             (face-attribute 'koek-wm/floating-border :foreground)))
     :config
+    (setq exwm-floating-border-width 3)
     (add-hook 'koek-thm/load-hook #'koek-wm/set-floating-border-color))
 
   (use-package exwm-manage
@@ -5697,7 +5698,7 @@ Load [[https://protesilaos.com/modus-themes/][Modus]] theme.
          `(koek-diff/variant            ((,class :inherit bold)))
          `(eyebrowse-mode-line-active   ((,class :foreground unspecified)))
          `(eyebrowse-mode-line-inactive ((,class :foreground ,bg-alt)))
-         `(koek-wm/floating-border      ((,class :foreground ,fg-main)))
+         `(koek-wm/floating-border      ((,class :foreground ,fg-window-divider-inner)))
          `(koek-wm/selected-workspace   ((,class :inherit bold)))
          `(koek-wm/unselected-workspace ((,class :foreground ,bg-alt)))
          `(koek-pdf/midnight            ((,class :foreground ,fg-main :background ,bg-main))))))
