[emacs] Hide mode line of floating GIMP buffers

--- a/emacs.org
+++ b/emacs.org
@@ -3330,7 +3330,7 @@ Bury unneeded buffers, computers have more than enough memory.
     :config
     (setq exwm-manage-configurations
           `(((string-prefix-p "gimp" (downcase exwm-class-name))
-             char-mode t)
+             char-mode t floating-mode-line nil)
             ((string-prefix-p "firefox" (downcase exwm-class-name))
              simulation-keys
              ,(mapcar (pcase-lambda (`(,from . ,to))
