[emacs] Bind counsel-describe-face

--- a/emacs.org
+++ b/emacs.org
@@ -3749,6 +3749,7 @@ Enable minibuffer commands (e.g. [[*counsel - Ivy powered commands][counsel]]) i
      ("C-c j o" . counsel-org-goto-all)
      ("C-c x x" . counsel-linux-app)
      ("C-c x s" . counsel-search)
+     ("C-c d f" . counsel-describe-face)
      :map minibuffer-local-map
      ("C-r" . counsel-minibuffer-history))
     :config
