[emacs] Move koek-gsr/disable-setup-backends to correct location

--- a/emacs.org
+++ b/emacs.org
@@ -711,13 +711,6 @@ When line is indented, press =TAB= to complete text before point.
                        `(add-hook ',(intern (concat (symbol-name mode) "-hook"))
                                   ,setup-backends-name))
                      modes))))
-
-    ;; Prevent geiser from modifying company-backends
-    (define-advice geiser-company--setup-company
-        (:around (f &rest args) koek-cpny/disable-setup-backends)
-      (let ((backends company-backends))
-        (apply f args)
-        (setq company-backends backends)))
     :config
     (setq company-backends
           '((company-capf company-files :with company-yasnippet)))
@@ -5456,6 +5449,15 @@ templates]].
   (use-package geiser-autodoc
     :defer t
     :delight)
+
+  (use-package geiser-company
+    :defer t
+    :preface
+    (define-advice geiser-company--setup-company
+        (:around (f &rest args) koek-gsr/disable-setup-backends)
+      (let ((backends company-backends))
+        (apply f args)
+        (setq company-backends backends))))
 
   (use-package geiser-impl
     :defer t
