[emacs] Fix indentation

--- a/emacs.org
+++ b/emacs.org
@@ -225,7 +225,8 @@ VC is a placeholder.
                           ispell-skip-region-alist)))
                (ispell-buffer))))
         (cond
-         (force t)
+         (force
+          t)
          ;; When spell check was completed, result is truthy
          (result
           ;; When nothing was corrected, character tick counter is
